[package]
name = "gn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.5"
thiserror = "1.0"
anyhow = "1.0"
json5 = "0.4"
either = "1"
once_cell = "1"

[dependencies.clap]
version = "3"
features = ["derive"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.url]
version = "2"
features = ["serde"]
